updated nav code

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,45 +1,151 @@
+
+.navbar-nav li{
+    padding:8px;
+    margin:5px 10px;
+}
+
+a.nav-link {font-weight:400;}
 .navbar{
+    background-color: var(--maincolor) !important;
+}
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+  }
+.header-logo img {
+    vertical-align: middle;
+    margin-block: 8px;
+}
+@media (max-width:1100px) {
+    a.nav-link{
+    font-size: 18px;
+    }
+    .navbar-nav li{
+        padding:8px;
+        margin:5px 5px;
+    }
+}
+@media (min-width: 992px){
+.navbar-toggler {
+    display: none;
+}
+}
+.navbar-toggler:focus {
+    text-decoration: none;
+    outline: 0;
+    /* box-shadow: 0 0 0 var(--bs-navbar-toggler-focus-width); */
+}
+@media (max-width: 992px) {
+.collapse:not(.show) {
+    display: none;
+}
+}
+
+.navbar-toggler-icon {
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    background-image: url(/assets/images/hamburger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+}
+.navbar-toggler-icon.show {
+        background-image: url(/assets/images/hamburger-close.svg);
+    }
+
+.navbar .container-fluid{
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
-.navbar-nav{
+ .navbar-nav{
     display: flex;
-    justify-content:center;
+    justify-content: space-between;
+    align-items: center;
 }
-.navbar-nav li{
-    padding:8px;
-    padding:5px 10px;
+.navbar-collapse{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+@media (max-width: 992px) {
+    .navbar-nav {
+        flex-direction: column;
+        justify-content:flex-end;
+        align-items:self-start;
+    }
+    .navbar-collapse{
+        flex-grow: 1;
+        flex-basis: 100%;
+    }
+}
+
+
+main {
+    /* Add padding to the top of the content to prevent it from being hidden behind the header */
+    padding-top: 110px;
+     /* Adjust according to your header's height */
+  }
+
+@media (min-width: 576px) {
+
+    .container,
+    .container-sm {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+
+    .container,
+    .container-md,
+    .container-sm {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl {
+        max-width: 1140px;
+    }
+}
+
+@media (min-width: 1400px) {
+
+    .container,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container-xl,
+    .container-xxl {
+        max-width: 1320px;
+    }
 }
 
 
-@media (min-width: 1400px){
-.container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-    max-width: 1320px;
-}
-}
-/* @media (min-width: 1200px){
-.container, .container-lg, .container-md, .container-sm, .container-xl {
-    max-width: 1140px;
-}
-}
-@media (min-width: 992px){
-.container, .container-lg, .container-md, .container-sm {
-    max-width: 960px;
-}
-}
 
-@media (min-width: 768px){
-.container, .container-md, .container-sm {
-    max-width: 720px;
-}
-}
-@media (min-width: 576px){
-.container, .container-sm {
-    max-width: 540px;
-}
-} */
+
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
