--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,7 +587,7 @@ p.card-text {
 @media (max-width:800px) {
     .home-page-steps {
         flex-direction: column;
-        margin-block: 47%;
+        margin-bottom: 100%;
     }
     .home-page-steps > * {
         align-self: unset;
@@ -609,28 +609,13 @@ p.card-text {
 }
 /* step section */
 
-/* form section */
-.form-control {
-    /* display: block; */
-    width: 100%;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: var(--bs-body-color);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: var(--bs-body-bg);
-    background-clip: padding-box;
-    border: var(--bs-border-width) solid var(--bs-border-color);
-    border-radius: var(--bs-border-radius);
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+/* get started section */
+section.get-started-section {
+    text-align: center;
 }
-
-div.form
+div.home-page-get-started-form
 {
-    /* display: block; */
+    display: block;
     text-align: center;
     border: 2px #98e2ff solid;
     border-radius: 10px;
@@ -638,23 +623,43 @@ div.form
     padding: 42px;
     box-shadow: 0px 10px 50px hsla(240,7%,62%,1);
 }
-/* div.form form
+div.home-page-get-started-form form
 {
     display: inline-block;
     margin-inline:auto;
     text-align: left;
-} */
-p.contact-us-para, h2.contact-us-heading {
-    text-align: center;
 }
-
+.form-label{
+    margin: 0px 0px 8px;
+}
+.form-field{
+    padding: 6px 12px;
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: white;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: white;
+    background-clip: padding-box;
+    appearance: none;
+    border: 1px solid lightgrey;
+    border-radius:.375rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
 .form-submit-button{
     text-align: center;
 }
-button.btn.btn-primary {
+.form-submit-button button{
+    background: rgb(74, 149, 247);
+    border-radius: 10px;
     padding: 10px 50px;
+    color: white;
 }
-/* form section */
+/* get started section */
 
 .footer-wrapper {
     display: flex;
