--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -1,6 +1,3 @@
-
-
-
 /* Box sizing rules */
 *,
 *::before,
@@ -151,4 +148,30 @@ Remove the inheritance of text transform in Edge and Firefox.
 button,
 select {
     text-transform: none;
+}
+/**
+Add the correct font weight in Edge and Safari.
+*/
+
+b,
+strong {
+	font-weight: bolder;
+}
+/**
+Correct the cursor style of increment and decrement buttons in Safari.
+*/
+
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+	height: auto;
+}
+
+/**
+1. Add the correct height in Firefox.
+2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+*/
+
+hr {
+	height: 0; /* 1 */
+	color: inherit; /* 2 */
 }
