--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -12,8 +12,11 @@
 html {
     color-scheme: dark light;
     font-family:
-    system-ui,
-    'Segoe UI',
+    
+    /* system-ui,
+    'Segoe UI', */
+    Calibre,
+    poppins,
     Roboto,
     Helvetica,
     Arial,
@@ -32,6 +35,7 @@ body {
     margin: 0;
     -webkit-text-size-adjust: 100%;
     font-size: 1rem;
+    /* font-size: calc(15px + 0.390625vw); */
     line-height: 1.5;
     min-height: 100vh;
 }
