--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,14 +128,14 @@ a {
 
 /* home page start */
 .home-page-welcome-image img{
-    height: 80vh;
+    /* height: 70vh; */
     text-align: center;
     max-width: 100%;
 }
 
 h3.home-page-welcome-name {
     margin-top: 50px;
-    font-size: 134px;
+    font-size: 8rem;
     font-weight: 500 ;
 }
 h2.home-page-welcome-quote{
@@ -160,9 +160,12 @@ h2.home-page-welcome-quote{
 }
 .home-page-welcome-main-div{
     display: flex;
+    align-items: flex-start;
 }
 .home-page-welcome-main-div > *{
-    flex: 1;
+    /* flex: 1; */
+    flex-basis: 0%;
+    flex-grow: 1;
 }
 @media (max-width:800px) {
     .home-page-welcome-main-div{
