--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -1,4 +1,4 @@
-/* faq */
+/* faq page*/
 
 .heading-faq {
     background-image: url(/assets/images/for-faq.jpg);
@@ -27,4 +27,4 @@
     background-image: url(/assets/images/plus-solid.svg);
     transform: rotate(315deg);
 }
-/* faq */
+/* faq page*/
