--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -679,8 +679,6 @@ div.home-page-get-started-form form
 
 div.heading h1 {
     text-align: center;
-    /* font-size: clamp(3.75rem, 4.5vw, 8rem); */
-    /* padding-block: clamp(3.75rem, 4.5vw, 8rem); */
 }
 /* .content-t-and-c div h3, .content-privacy-policy div h3{
     margin:30px 0px 20px 0px;
@@ -718,30 +716,31 @@ li.nav-item:last-child {
     border-radius:10px;
     padding-inline:10px;
 }
+
+/* transformations page */
+
 .gallery {
+    padding-block: 4em;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
 }
 .gallery > * {
-flex-basis: 350px; 
-/* width: 350px; */
+flex-basis: 350px;
 }
 .gallery-image img {
 object-fit: cover;
-max-width: 100%;
 height: auto;
 vertical-align: middle;
 border-radius: 5px;
 }
 section.transformations-page-section div h1,section.transformations-page-section div p{
 text-align:center;
-padding-block:10px;
 }
-section.transformations-page-section div h1{
-padding-block:100px;
-}
+
+/* transformations page */
+
 /* our services program */
 .services{
     display: flex;
@@ -768,3 +767,35 @@ svg {
     height: 20px;
 }
 
+
+
+/* faq page*/
+
+.heading-faq {
+    background-image: url(/assets/images/for-faq.jpg);
+    background-size:     cover;                    
+    background-repeat:   no-repeat;
+    background-position: top bottom;
+    height: 100%;
+    min-height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.heading-faq h1{
+    text-align: center;
+    color: white;
+}
+.content-faq{
+    padding: 50px 0px;
+}
+.accordion-button::after {
+
+    background-image: url(/assets/images/plus-solid.svg);
+    
+}
+.accordion-button:not(.collapsed)::after {
+    background-image: url(/assets/images/plus-solid.svg);
+    transform: rotate(315deg);
+}
+/* faq page*/
