--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -4,11 +4,23 @@
 
 :root {
     /* Colors: */
-    --maincolor: lightblue;
-    --secondarycolor: hsl(216, 54%, 58%);
-    --tertiarycolor: #30AAD7;
-    --anchorcolor: cornflowerblue;
+    --clr-text: hsl(204, 100%, 1%);
+    --clr-surface:hsl(0,0%,100%);
+    --clr-primary:#4498CE;
+    --clr-secondary: #8BC9F1;
+    --clr-tertiary: #43B3FD;
+    /* https://www.realtimecolors.com/?colors=0f1316-f4f7fa-4498ce-8bc9f1-43b3fd&fonts=Poppins-Poppins */
     /* Fonts */
-    --mainfont: 'poppins';
-    --secondaryFont: 'Calibre';
+    --base-font: 'IBM Plex Sans', sans-serif;
+    --accent-font: 'IBM Plex Sans Condensed', sans-serif;
+
+    --font-size-300: clamp(1.125rem, 1.0815rem + 0.2174vi, 1.25rem);
+    --font-size-400: clamp(1.35rem, 1.2761rem + 0.3696vi, 1.5625rem);
+    --font-size-500: clamp(1.62rem, 1.5041rem + 0.5793vi, 1.9531rem);
+    --font-size-600: clamp(1.944rem, 1.771rem + 0.8651vi, 2.4414rem);
+    --font-size-700: clamp(2.3328rem, 2.0827rem + 1.2504vi, 3.0518rem);
+    --font-size-800: clamp(2.7994rem, 2.4462rem + 1.7658vi, 3.8147rem);
+    
+    
+
 }
