--- a/assets/css/get-started.css
+++ b/assets/css/get-started.css
@@ -51,3 +51,5 @@ h2.get-started-heading {
 .get-started-container > *{
     margin-block:10%
 }
+/* https://65fa1ed5a552c70008ce545e--scott140507.netlify.app/get-started */
+
