--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,53 +1,88 @@
+h1.contact-us-heading {
+    color: white;
+}
+
+.heading-contact-us {
+    background-image: url(/assets/images/for-contact.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: auto;
+    max-width: 100%;
+    min-height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .contact-us-container {
     display: flex;
     justify-content: center;
-    margin-block: 5%;
+    margin-block: 5rem;
 }
-.contact-us-container > * {
-    /* flex: 1; */
-    flex-basis: 0 ;
-     flex-grow: 1;
-} 
-.contact-us-contact-details ul li{
-    margin-block:20px;
+
+.contact-us-container > div {
+    flex-basis: 0;
+    flex-grow: 1;
 }
-.contact-us-contact-details{
-    margin-left:10%;
+
+.contact-us-contact-details ul li {
+    margin-block: 1.5rem;
 }
+
+.contact-us-contact-details {
+    margin-left: 5rem;
+}
+
+.contact-us-section div.container {
+    margin-top: 5rem;
+}
+
+.contact-us-contact-details ul li:last-child a {
+    background-color: #55cb55;
+    color: white;
+    font-weight: 500;
+    padding-block: 2%;
+    padding-inline: 4%;
+    border-radius: 5px;
+}
+
 @media (max-width:800px) {
     .contact-us-container {
         flex-direction: column;
-       
-    } 
-    .contact-us-container > *{
+        margin-block: unset;
+
+    }
+    .contact-us-container>div {
         margin-block: 10%;
     }
-    .contact-us-contact-details{
+
+    .contact-us-contact-details {
         text-align: center;
-        margin-left:unset;
+        margin-left: unset;
     }
+}
+.mb-3 {display: block;}
+
+label.form-label {
+    display: inline-block;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--clr-text);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: var(--clr-surface);
+    background-clip: padding-box;
+    border: 1px solid lightgrey;
+    border-radius: 0.375rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     
 }
-.contact-us-section div.container{
-    padding-top:50px;
-}
-.contact-us-contact-details ul li:last-child a{
-    background-color:#0aeb0a;
-        color:white;
-        font-weight:500;
-        padding-block:1%;
-        padding-inline:3%;
-        border-radius:5px;
-    }
-
-    .heading-contact-us {
-        background-image: url(/assets/images/for-contact.jpeg);
-        background-size:     cover;                    
-        background-repeat:   no-repeat;
-        background-position: center center;
-        height: 100%;
-        min-height: 60vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
