--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -83,7 +83,7 @@ h1 {
 h2 {
     font-size: 1.5rem;
     font-weight: 500;
-    margin-block: 0.83em;
+    /* margin-block: 0.83em; */
 }
 
 h3 {
@@ -93,7 +93,8 @@ h3 {
 }
 
 h4 {
-    font-size: 1.00rem;
+    font-size: 1.25rem;
+    font-weight: 500;
 }
 
 h5 {
@@ -167,7 +168,7 @@ select {
 a {
     text-decoration: none;
     cursor: pointer;
-    color: var(--anchorcolor);
+    color: var(--clr-tertiary);
 }
 
 
