--- a/assets/css/get-started.css
+++ b/assets/css/get-started.css
@@ -1,27 +1,14 @@
+.get-started-heading{
+    text-align: center;
+}
 .get-started-container {
     display:flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
 }
-.get-started-container > * {
-    flex-grow: 1;
-    flex-basis: 0; 
-}
-.get-started-contact-details {
-    margin-left:20%;
-}
-@media (max-width:800px) {
-    .get-started-container {
-        flex-direction: column;
-    }
-    .get-started-contact-details {
-        margin-left:unset;
-        text-align: center;
-    }
-}
-
 .get-started-contact-details ul li {
-    margin-block:30px;
+    margin-block:2rem;
 }
-
 .get-started-contact-details ul li:nth-child(3) a{
     border-radius: 5px;
     background-color:#25d366;
@@ -37,19 +24,43 @@
     opacity: 80%;
     font-weight: 500;
 }
-p.get-started-para, h2.get-started-heading {
-    text-align:center;
-    
-}
 p.get-started-para {
     text-align:center;
-    margin-bottom:3%
 }
-h2.get-started-heading {
-    margin-top:3%
+label.form-label {
+    display: inline-block;
 }
-.get-started-container > *{
-    margin-block:10%
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--clr-text);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: var(--clr-surface);
+    background-clip: padding-box;
+    border: 1px solid lightgrey;
+    border-radius: 0.375rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    
+}
+.form-text {
+    margin-top: 0.25rem;
+    font-size: .875em;
+    color: lightgrey;
+}
+
+@media (max-width:800px) {
+    .get-started-container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
 /* https://65fa1ed5a552c70008ce545e--scott140507.netlify.app/get-started */
 
