--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,12 +131,12 @@ h2,
     max-width: 100%;
 }
 
-h3.home-page-welcome-name {
-    margin-top: 50px;
+.home-page-welcome-name {
+    margin-block: 0.5rem;
     font-size: 8rem;
     font-weight: 500 ;
 }
-h2.home-page-welcome-quote{
+.home-page-welcome-quote{
     margin-top: 10px;
     margin-bottom: 44px;
 }
@@ -146,15 +146,10 @@ h2.home-page-welcome-quote{
 }
 .home-page-welcome-learn-more {
     text-transform: uppercase;
-    background-color: var(--maincolor);
-    color: white;
-    border: white;
 }
-.home-page-welcome-learn-more:hover {
+
+p.home-page-work-with-you {
     text-transform: uppercase;
-    background-color: var(--secondarycolor);
-    color: white;
-    border: white;
 }
 .home-page-welcome-main-div{
     display: flex;
@@ -169,7 +164,7 @@ h2.home-page-welcome-quote{
     .home-page-welcome-main-div{
         flex-direction: column;
     }
-    h3.home-page-welcome-name {
+    .home-page-welcome-name {
         font-size: 65px;
     }
     .home-page-welcome-image{
@@ -995,7 +990,7 @@ h1.plan-pricing-page-heading, p.plan-pricing-page-content {
     border-radius:10px;
     text-align: center;
 }
-a.btn {
+.btn {
     padding:0.75em 1.5em;
     background-color: var(--clr-tertiary);
     color: var(--clr-surface);
@@ -1003,7 +998,7 @@ a.btn {
     border-radius: 0.3em;
     
 }
-a.btn:hover {
+.btn:hover {
     background-color: var(--clr-surface);
     color: var(--clr-primary);    
 }
