--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ h2.home-page-about-heading {
 ol.home-page-about-benefit li {
     list-style: '✓';
     font-size: 1rem;
+    margin-left: 1rem;
 }
 ::marker {
     color: var(--clr-primary);
@@ -468,6 +469,9 @@ left: 90%;;
 position:absolute;
 left: 95%;
 } 
+.glide__arrow:hover{
+    background-color: white;
+}
 @media (max-width:800px) {
     .glide__arrow{
         display: none;
@@ -555,7 +559,7 @@ p.card-text {
     font-size: 10rem;
 }
 .home-page-steps {
-    height:50vh;
+    /* height:50vh; */
     display:flex;
     justify-content: space-evenly;
     position: relative;
@@ -587,13 +591,9 @@ p.card-text {
     top:66%;
     left:60%
 } 
-.home-page-steps {
-    margin-top: 100px;
-}
 @media (max-width:800px) {
     .home-page-steps {
         flex-direction: column;
-        margin-bottom: 100%;
     }
     .home-page-steps > * {
         align-self: unset;
@@ -612,7 +612,10 @@ p.card-text {
         transform: rotate(45deg);
         border: unset;
     } 
-}
+    .home-page-arrow-one img, .home-page-arrow-two img{
+        display: inline-block;
+    }
+} 
 /* step section */
 
 /* get started section */
